@startuml

package entities{
    abstract class Entity {
      - items: ArrayList<Item>
      - stat: Stat
      - name: String
      - location: Location
      + takeItem(Item, boolean): void
      + setStat(Stat): void
      + getItem(boolean): ArrayList<Item>
      + toString(): String
      + hashCode(): int
      + getName(): String
      + giveItem(Entity, Item): void
      + meet(Object): void
      + equals(Object): boolean
      # setLocation(Location): void
      + {abstract} speak(String): void
      + move(Location): void
      + getLocation(): Location
      + getStat(): String
      + setNoItems(): void
      + addItem(Item, boolean): void
    }
    interface Owner << interface >> {
      + getItem(boolean): ArrayList<Item>
      + setNoItems(): void
      + takeItem(Item, boolean): void
      + giveItem(Entity, Item): void
      + addItem(Item, boolean): void
    }
    class Transport <<record>> {
      - name: String
      + name(): String
      + move(Location, ArrayList<Entity>): void
    }
    package human{
        abstract class Human {
          - age: int
          + speak(String): void
          + equals(Object): boolean
          + getAge(): int
          + hashCode(): int
          + toString(): String
        }
        class Capitan {
          + speak(String): void
          + toString(): String
          + MakeCommand(Entity, Item, Entity, Sailors): void
        }
        class MainCharacter {
          + pray(): void
        }
        class Governor
    }
    package people{
        abstract class People {
          - amount: int
          + setAmount(int): void
          + toString(): String
          + getAmount(): int
          + speak(String): void
          + meet(Object): void
        }
        class Enemies {
          - smart: boolean
          + speak(String): void
          + setSmart(boolean): void
          + isSmart(): boolean
          + AttackTransport(Transport): boolean
        }
        class Sailors {
          + DoCommand(Entity, Item, Entity): void
        }
    }
}
package enums{
    enum Item{
      + FOOD
      + TUKES
      - title: String
      + values(): Item[]
      + getTitle(): String
      + toString(): String
      + valueOf(String): Item
    }
    enum Location {
      + ISLAND
      + PORT
      + DESERT
      + SEA
      + COAST
      - title: String
      + valueOf(String): Location
      + toString(): String
      + values(): Location[]
      + getTitle(): String
    }
    enum Stat {
      + ANGRY
      + LONELINESS
      + STRESSED
      + HAPPINESS
      - title: String
      + values(): Stat[]
      + valueOf(String): Stat
      + getTitle(): String
      + toString(): String
    }
}
package exceptions{
    exception NoItems {
      + getMessage(): String
    }
    exception InvalidValue {
      + getMessage(): String
    }
}

class Main {
  + main(String[]): void
}
class Story {
  + tellStory(MainCharacter, Capitan, Sailors, Enemies, Governor): void
}

Entity         ..|>  Owner
Human          --|>  Entity
People         --|>  Entity
Sailors        --|>  People
Enemies        --|>  People
Capitan        --|>  Human
Governor       --|>  Human
MainCharacter  --|>  Human
Story          ..o   Main
Capitan        ..>   Sailors: Отдаёт приказ
Sailors        ..>   Entity: Выполняют приказ
Enemies        ..>   Transport: Атакуют транспорт
Transport      ..>   Entity: Перевозит
@enduml
